--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wao's Websites | @jswao</title>
+  <title>Wao's Services | @jswao</title>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="TradeCore.png">
@@ -27,13 +27,8 @@
 <nav class="navbar container">
   <a href="#" class="nav-logo">
     <img src="TradeCore.png" alt="Trade Core">
-    Wao's Websites
+    Wao's Services 
   </a>
-  <div class="nav-links">
-    <a href="#about" class="nav-link">About</a>
-    <a href="#verification" class="nav-link">Verification</a>
-    <a href="#team" class="nav-link">Team</a>
-  </div>
   <a href="https://discord.gg/Sc8YdundhU" target="_blank" class="btn btn-primary">
     <i class="ri-discord-fill"></i> Join Server
   </a>
@@ -65,7 +60,7 @@
         </div>
       </div>
     </div>
-    <a id="server-invite" href="#" target="_blank" class="btn-join">Join</a>
+    <a id="server-invite" href="https://discord.gg/rbnZU3s59S" target="_blank" class="btn-join">Join</a>
   </div>
 </header>
 
