--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <div class="server-counts">
         <div class="count-group">
           <span class="status-dot online"></span>
-          <span id="online-count">-- Online</span>
+          <span id="online-count">3 Online</span>
         </div>
         <div class="count-group">
           <span class="status-dot offline"></span>
-          <span id="member-count">-- Members</span>
+          <span id="member-count">4 Members</span>
         </div>
       </div>
     </div>
@@ -175,11 +175,11 @@ function loadFounder() {
       <div class="founder-content">
         <div class="avatar-wrapper">
           <div class="founder-avatar"
-               style="background-image:url('https://cdn.discordapp.com/embed/avatars/0.png')">
+               style="background-image:url('https://cdn.discordapp.com/attachments/1447239565206098091/1470220359671480370/TradeCore.png?ex=698a80e9&is=69892f69&hm=3bf7b3b9879b376b9455ba3eb98f61dd6f6afdbbddd91c93bbe9171defa9ce73&')">
           </div>
         </div>
         <div class="founder-name">Wao</div>
-        <div class="founder-id">@wao</div>
+        <div class="founder-id">@jswao</div>
         <div class="founder-id">1445772766178447441</div>
       </div>
     </div>
