--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ function loadFounder() {
                style="background-image:url('https://cdn.discordapp.com/attachments/1447239565206098091/1470220359671480370/TradeCore.png?ex=698a80e9&is=69892f69&hm=3bf7b3b9879b376b9455ba3eb98f61dd6f6afdbbddd91c93bbe9171defa9ce73&')">
           </div>
         </div>
-        <div class="founder-name">Wao</div>
-        <div class="founder-id">@jswao</div>
-        <div class="founder-id">1445772766178447441</div>
+        <div class="founder-name">wao</div>
+        <div class="founder-id">@justwao</div>
+        <div class="founder-id">694568342828089405</div>
       </div>
     </div>
   `;
